[project]
name = "wfloat"
version = "0.0.2"
authors = [
  { name="Mitchell Sayre", email="sayremitch@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wfloat/clients/wfloat-python"
Issues = "https://github.com/wfloat/clients/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"